# attendancebot

./: LICENSE  Makefile  README.md  attendance-bot.cabal  attendancebot.cabal  attendancebot.service  stack.yaml
src/: Cron.hs  Main.hs
src/AtnBot/: Actions.hs  Config.hs  DB.hs  Monad.hs  Report.hs  Schedule.hs  Spreadsheet.hs  UserTracker.hs
src/Attendance/: BotState.hs  Calendar.hs  CheckIn.hs  Config.hs  DB.hs  Holidays.hs  Log.hs  Monad.hs  Report.hs  Schedule.hs  Spreadsheet.hs  TimeSheet.hs  Timing.hs  UserTracker.hs
