name:                attendance-bot
version:             0.1.0.0
synopsis:            Slackbot to track empolyee attendance
description:         Please see README.md
homepage:            https://github.com/asayers/attendance-bot
license:             BSD3
license-file:        LICENSE
author:              Alex Sayers
maintainer:          alex.sayers@gmail.com
copyright:           2016 Alex Sayers
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable attendance-bot
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:
        base >= 4.7 && < 5
      , containers >= 0.5
      , unordered-containers >= 0.2.7
      , lens >= 4.13
      , slack-api >= 0.9
      , text >= 1.2
      , time >= 1.5
      , transformers >= 0.4
