name:                attendancebot
version:             0.1.0.0
synopsis:            Slackbot to track empolyee attendance
description:         Please see README.md
homepage:            https://github.com/asayers/attendancebot
license:             BSD3
license-file:        LICENSE
author:              Alex Sayers
maintainer:          alex.sayers@gmail.com
copyright:           2016 Alex Sayers
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable attendancebot
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
        Attendance.Config
      , Attendance.DB
      , Attendance.Monad
      , Attendance.Report
      , Attendance.Spreadsheet
      , Attendance.TimeSheet
      , Attendance.UserTracker
  build-depends:
        aeson >= 0.11.2
      , attoparsec >= 0.13
      , base >= 4.7 && < 5
      , transformers-base >= 0.4.4
      , Chart >= 1.6
      , Chart-cairo >= 1.6
      , containers >= 0.5
      , cron >= 0.4.1
      , data-default-class >= 0.0.1
      , directory >= 1.2
      , exceptions >= 0.8.2
      , filepath >= 1.4
      , gogol >= 0.1
      , gogol-sheets >= 0.1
      , gogol-storage >= 0.1
      , hashable >= 1.2
      , lens >= 4.13
      , lifted-base >= 0.2
      , monad-control >= 1.0
      , mtl >= 2.2
      , old-locale
      , process >= 1.2.3
      , resourcet >= 1.1
      , scientific >= 0.3.4
      , slack-api >= 0.9
      , temporary >= 1.2
      , text >= 1.2
      , thyme >= 0.3.5
      , time >= 1.5
      , transformers >= 0.4.2
      , tz >= 0.1.1
      , unordered-containers >= 0.2.7
      , vector-space >= 0.10
